--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                 <img src="assets/india-gate.png" alt="Logo" width="30" height="29"
                     class="d-inline-block align-text-top">
 
-                Historical places in India
+               <span class="fs-xs-3">
+                        Historical places in India 
+                </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
                 <span class="navbar-toggler-icon"></span>
