--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container-lg">
             <a class="navbar-brand fw-bold brandFont" href="#">
                 <img src="assets/india-gate.png" alt="Logo" width="30" height="29"
-                    class="d-inline-block align-text-top">
+                    class="d-none d-md-inline-block align-text-top">
 
                <span class="fs-xs-3">
                         Historical places in India 
