--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top ">
         <div class="container-lg">
-            <a class="navbar-brand fw-bold brandFont" href="#">
+            <a class="navbar-brand fw-md-bold fs-4 fs-md-1 brandFont" href="#">
                 <img src="assets/india-gate.png" alt="Logo" width="30" height="29"
                     class="d-none d-md-inline-block align-text-top">
 
