--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     class="d-none d-md-inline-block align-text-top">
 
                <span class="fs-xs-3">
-                        Historical places in India 
+                        Historical places <span class="d-none d-sm-inline-block">in India </span>
                 </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
