--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <h3 class="card-title">
                             Historical Places in India
                         </h3>
-                        <p class="lead card-subtitle">Fascinating history of historical places</p>
+                        <p class="lead card-subtitle">Fascinating history of Ancient monuments</p>
                     </div>
 
                     <div class="row p-3 m-md-5 lead justify-content-center">
