--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                 <p>
                                     The Charminar is a monument located in Hyderabad, Telangana, India. Constructed in
                                     1591, the landmark is a symbol of Hyderabad and officially incorporated in the
-                                    emblem of Telangana. The Charminar's long history includes the existence...
+                                    emblem of Telangana. The Charminar's long history includes...
                                 </p>
                             </div>
                             <a href="https://en.wikipedia.org/wiki/Charminar" target="_blank"
@@ -269,7 +269,7 @@
                                 <p>
                                     The Red Fort or Lal Qila is a historic fort in the Old Delhi neighbourhood of Delhi,
                                     India, that historically served as the main residence of the Mughal emperors.
-                                    Emperor Shah Jahan commissioned construction of the Red Fort on 12 May 1638...
+                                    Emperor Shah Jahan commissioned construction of the Red Fort on...
                                 </p>
                             </div>
                             <a href="https://en.wikipedia.org/wiki/Red_Fort" target="_blank"
