--- a/index.html
+++ b/index.html
@@ -62,13 +62,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top ">
         <div class="container-lg">
-            <a class="navbar-brand fw-md-bold fs-4 fs-md-1 brandFont" href="#">
-                <img src="assets/india-gate.png" alt="Logo" width="30" height="29"
-                    class="d-none d-md-inline-block align-text-top">
-
-               <span class="fs-xs-3">
-                        Historical places <span class="d-none d-sm-inline-block">in India </span>
-                </span>
+            <a class="navbar-brand fw-bold brandFont" href="https://suke-ag.github.io/India/" target="_blank">
+                <img src="assets/india-gate.png" alt="Logo" width="30" height="29" class="d-none d-md-inline-block align-text-top">
+                 Historical places <span class="d-none d-sm-inline-block">in India </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
                 <span class="navbar-toggler-icon"></span>
