--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <title>Historical places in India</title>
 
     <!-- Bootstrap -->
@@ -53,7 +53,6 @@
             cursor: pointer;
             padding: 18px 0;
         }
-
         /* //Footer styles */
     </style>
 </head>
@@ -62,9 +61,11 @@
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top ">
         <div class="container-lg">
-            <a class="navbar-brand fw-bold brandFont" href="https://suke-ag.github.io/India/" target="_blank">
-                <img src="assets/india-gate.png" alt="Logo" width="30" height="29" class="d-none d-md-inline-block align-text-top">
-                 Historical places <span class="d-none d-sm-inline-block">in India </span>
+            <a class="navbar-brand fw-md-bold fs-4 fs-md-1 brandFont" href="https://suke-ag.github.io/India/"
+                target="_blank">
+                <img src="assets/india-gate.png" alt="Logo" width="30" height="29"
+                    class="d-none d-md-inline-block align-text-top">
+                Historical places <span class="d-none d-sm-inline-block">in India </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
                 <span class="navbar-toggler-icon"></span>
@@ -79,6 +80,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#monuments">Famous Monuments</a></li>
+                            <li><a class="dropdown-item" href="#song">Jana Gana Mana</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -88,6 +90,9 @@
                 </ul>
 
                 <ul class="navbar-nav ms-auto">
+                    <!-- <li class="nav-item">
+                        <a href="#audio" class="nav-link"><audio src="E:\HTML\web Dev FEB\additionalFiles\audio1505930211.m4a" width="2px" controls></audio></a>
+                    </li> -->
                     <li class="nav-item">
                         <a href="#home" class="nav-link">Home</a>
                     </li>
@@ -122,7 +127,7 @@
                         <h3 class="card-title">
                             Historical Places in India
                         </h3>
-                        <p class="lead card-subtitle">Fascinating history of Ancient monuments</p>
+                        <p class="lead card-subtitle">Fascinating history of historical places</p>
                     </div>
 
                     <div class="row p-3 m-md-5 lead justify-content-center">
@@ -242,7 +247,7 @@
                                 <p>
                                     The Charminar is a monument located in Hyderabad, Telangana, India. Constructed in
                                     1591, the landmark is a symbol of Hyderabad and officially incorporated in the
-                                    emblem of Telangana. The Charminar's long history includes...
+                                    emblem of Telangana. The Charminar's long history includes the existence...
                                 </p>
                             </div>
                             <a href="https://en.wikipedia.org/wiki/Charminar" target="_blank"
@@ -265,7 +270,7 @@
                                 <p>
                                     The Red Fort or Lal Qila is a historic fort in the Old Delhi neighbourhood of Delhi,
                                     India, that historically served as the main residence of the Mughal emperors.
-                                    Emperor Shah Jahan commissioned construction of the Red Fort on...
+                                    Emperor Shah Jahan commissioned construction of the Red Fort on 12 May 1638...
                                 </p>
                             </div>
                             <a href="https://en.wikipedia.org/wiki/Red_Fort" target="_blank"
@@ -302,6 +307,40 @@
         </div>
     </section>
     <!-- //Famous Monuments -->
+        
+    <!-- Song -->
+    <section id="song">
+    <div class="container">
+        <div class="card mb-5 shadow-sm">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <div class="embed-responsive">
+                        <div class="row" style="height: 29vh;">
+                            <iframe class=" col embed-responsive-item rounded"
+                                src="https://www.youtube.com/embed/xycoPHNwG4g" frameborder="0"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <h1>Jana Gana Mana</h1>
+                        </div>
+                        <div class="card-text">
+                            <p>
+                                "Jana Gana Mana" (Sanskrit: जन गण मन) is the national anthem of the Republic of India. It was originally composed as Bharoto Bhagyo Bidhata in Bengali by polymath Rabindranath Tagore on 11 December 1911. The first stanza of the song Bharoto Bhagyo Bidhata...
+                            </p>
+                        </div>
+                        <a href="https://en.wikipedia.org/wiki/Jana_Gana_Mana" target="_blank"
+                            class="btn btn-outline-primary rounded-0 float-end">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
+    <!-- //Song -->
 
     <!-- Footer -->
     <section id="about" class="footer bg-dark text-white">
