--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <!-- Song -->
     <section id="song">
     <div class="container">
-        <div class="card mb-5 shadow-sm">
+        <div class="card mb-5 p-2 shadow-sm">
             <div class="row g-0">
                 <div class="col-md-4">
                     <div class="embed-responsive">
