--- a/index.html
+++ b/index.html
@@ -310,35 +310,40 @@
         
     <!-- Song -->
     <section id="song">
-    <div class="container">
-        <div class="card mb-5 p-2 shadow-sm">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <div class="embed-responsive">
-                        <div class="row" style="height: 29vh;">
-                            <iframe class=" col embed-responsive-item rounded"
-                                src="https://www.youtube.com/embed/xycoPHNwG4g" frameborder="0"
-                                allowfullscreen></iframe>
+        <div class="container">
+            <div class="card mb-5 p-2 shadow-sm">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <div class="embed-responsive">
+                            <div class="row" style="height: 29vh;">
+                                <iframe class=" col embed-responsive-item rounded"
+                                    src="https://www.youtube.com/embed/xycoPHNwG4g" frameborder="0"
+                                    allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <div class="card-title">
-                            <h1>Jana Gana Mana</h1>
+                    <div class="col-md-8">
+                        <div class="card-body p-0 p-sm-3">
+                            <div class="card-title p-3 p-sm-0">
+                                <h1>Jana Gana Mana</h1>
+                            </div>
+                            <audio class="m-0" src="assets\jana-gana-mana.m4a" controls></audio>
+
+                            <div class="card-text">
+                                <p class="p-3 p-sm-0">
+                                    "Jana Gana Mana" (Sanskrit: जन गण मन) is the national anthem of the Republic of
+                                    India. It was originally composed as Bharoto Bhagyo Bidhata in Bengali by polymath
+                                    Rabindranath Tagore on 11 December 1911. The first stanza of the song Bharoto Bhagyo
+                                    Bidhata...
+                                </p>
+                            </div>
+                            <a href="https://en.wikipedia.org/wiki/Jana_Gana_Mana" target="_blank"
+                                class="btn btn-outline-primary rounded-0 float-end">Read More</a>
                         </div>
-                        <div class="card-text">
-                            <p>
-                                "Jana Gana Mana" (Sanskrit: जन गण मन) is the national anthem of the Republic of India. It was originally composed as Bharoto Bhagyo Bidhata in Bengali by polymath Rabindranath Tagore on 11 December 1911. The first stanza of the song Bharoto Bhagyo Bidhata...
-                            </p>
-                        </div>
-                        <a href="https://en.wikipedia.org/wiki/Jana_Gana_Mana" target="_blank"
-                            class="btn btn-outline-primary rounded-0 float-end">Read More</a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </section>
     <!-- //Song -->
 
