--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#monuments">Famous Monuments</a></li>
-                            <li><a class="dropdown-item" href="#song">Jana Gana Mana</a></li>
+                            <li><a class="dropdown-item" href="#song">National Anthem</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -325,7 +325,7 @@
                     <div class="col-md-8">
                         <div class="card-body p-0 p-sm-3">
                             <div class="card-title p-3 p-sm-0">
-                                <h1>Jana Gana Mana</h1>
+                                <h1>National Anthem</h1>
                             </div>
                             <audio class="m-0" src="assets\jana-gana-mana.m4a" controls></audio>
 
