--- a/index.html
+++ b/index.html
@@ -73,16 +73,15 @@
         }
 
         @keyframes animatebg{
-            15%{background-color: blueviolet;}
-            30%{background-color: royalblue;}
-            50%{background-color: rosybrown;}
-            70%{background-color: goldenrod;}
-            100%{background-color: yellowgreen;}
+            20%{background-color: lightblue;}
+            40%{background-color: lightgreen;}
+            70%{background-color: lightsalmon;}
+            100%{background-color: lightseagreen;}
         }
     </style>
 </head>
 
-<body>
+<body class="c">
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top ">
         <div class="container-lg">
@@ -148,27 +147,27 @@
             <div class="justify-content-center align-items-center text-center text-md-center">
                 <img src="assets/india-gate-all.png" alt="Logo" width="360" height="250" class="d-inline-block">
                 <h1>
-                    <div class="cardbg card border-0 display-3 text-center c">
+                    <div class="cardbg c card border-0 display-3 text-center c">
                         <h3 class="card-title b">
                             Historical Places in India
                         </h3>
                         <p class="lead card-subtitle">Fascinating history of historical places</p>
                     </div>
 
-                    <div class="row p-3 m-md-5 lead justify-content-center">
-                        <div class="col-lg-5 col-sm-6">
+                    <div class="row p-3 m-md-5 lead justify-content-center ">
+                        <div class="col-lg-5 col-sm-6 d-none d-md-inline-block">
                             <div class="card border-0">
-                                <div class="card-body cardbg text-center py-2">
-                                    <p class="card-text mx-5 text-muted d-none d-md-block">”Death comes to all, but
+                                <div class="card-body cardbg c b text-center py-2">
+                                    <p class="card-text mx-5 text-muted d-none d-md-block p-2">”Death comes to all, but
                                         great achievements build a monument which shall endure until the sun grows
                                         cold.”</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-5 col-md-6">
+                        <div class="col-lg-5 col-md-6 d-none d-md-inline-block">
                             <div class="card border-0">
-                                <div class="card-body cardbg text-center py-2">
-                                    <p class="card-text  mx-5  text-muted d-none d-md-block">”Ancient monuments are full
+                                <div class="card-body cardbg c text-center py-2">
+                                    <p class="card-text  mx-5 text-muted d-none d-md-block">”Ancient monuments are full
                                         of wisdom, for they have been filled with what they have seen and heard for
                                         hundreds of years.”</p>
                                 </div>
